# inneranimalmedia

./: .cursorignore  .cursorrules  .env.cloudflare.example  .gitignore  AGENTS.md  AGENTSAM.md  CLAUDE.md  COMPONENT_INDEX.txt  CURSOR-SESSION-HANDOFF.md  INTEGRATION.md  Mcp_Oauth_Consent.jsx  PROJECT.md  README.md  SOURCE_HITS.md  TSX_FILES.txt  Tableau10.js  Tableau10.js.map  UI_SURFACES.txt  _commonjs-dynamic-modules.js  about.html  agent-dashboard.css  agentsam_checklist.md  agentsam_route_requirements_tool_routing_setup.py  agentsam_table_audit.txt  agentsamrefine.md  ar-SA-G6X2FPQ2.js  ar-SA-G6X2FPQ2.js.map  arc.js  arc.js.map  array.js  array.js.map  auth_audit.py  auth_audit_results.json  az-AZ-76LH7QW2.js  az-AZ-76LH7QW2.js.map  benchmark-fair.sh  bg-BG-XCXSNQG7.js  bg-BG-XCXSNQG7.js.map  blockDiagram-38ab4fdb.js  blockDiagram-38ab4fdb.js.map  (+233 more)
.cursor/: hooks.json  mcp.json
.githooks/: post-commit  readme.md
.scratch/: audit_agentsam_tables.py  audit_auth_alignment.py  audit_browser_screenshot.py  audit_callai_pattern.py  audit_command_pipeline.py  audit_command_pipeline_output.txt  audit_cursor_parity.py  audit_dispatch_pattern.py  audit_fs_catalog_output.txt  audit_fs_catalog_seed.py  audit_output.txt  audit_quality_gap.py  patch.py  (+19 more)
services/cms-pipeline-service/: README.md  pylock.toml  pyproject.toml  wrangler.jsonc
services/cms-pipeline-service/python_modules/workers_runtime_sdk-1.5.0.dist-info/: METADATA
services/cms-pipeline-service/src/: entry.py
services/cms-pipeline-service/src/pipeline/: agent_prototype.py  bootstrap.py  html_sections.py
(+4949 files in other folders)
